# yolo-benchmark

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_run.py
yolo_benchmark/: __init__.py  benchmark.py  gui.py  metrics.py  model_loader.py  runner.py  utils.py
